rename `application.properties` to `chat-gpt-cli.config`